Fix - Correction de l'édition de document et déclaration sur le site de manage

--- a/Sheaft.Web.Manage/Views/Declarations/Edit.cshtml
+++ b/Sheaft.Web.Manage/Views/Declarations/Edit.cshtml
@@ -99,7 +99,7 @@
         </div>
     </div>
     <br />
-    <a asp-controller="Legals" asp-action="EditUserLegals" asp-route-userId="@Model.Id" class="btn btn-info">
+    <a asp-controller="Legals" asp-action="Edit" asp-route-id="@ViewBag.LegalId" class="btn btn-info">
         Go back
     </a>
 </div>
