Update - Synchronisation du KYCLevel sur Legals pour limiter les erreurs de création de Payout

--- a/Sheaft.Web.Manage/Views/Legals/EditLegalBusiness.cshtml
+++ b/Sheaft.Web.Manage/Views/Legals/EditLegalBusiness.cshtml
@@ -11,6 +11,12 @@
         new SelectListItem("Organization", LegalKind.Organization.ToString("G"))
     };
 
+    var validations = new List<SelectListItem> {
+        new SelectListItem("NotSpecified", LegalValidation.NotSpecified.ToString("G")),
+        new SelectListItem("Light", LegalValidation.Light.ToString("G")),
+        new SelectListItem("Regular", LegalValidation.Regular.ToString("G"))
+    };
+
     var uboCount = Model.Declaration?.Ubos?.Count() ?? 0;
 }
 
@@ -41,6 +47,10 @@
                 <div class="form-group">
                     @Html.LabelFor(m => m.Kind)
                     @Html.DropDownListFor(m => m.Kind, kinds, new { @class = "form-control" })
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Validation)
+                    @Html.DropDownListFor(m => m.Validation, validations, new { @class = "form-control" })
                 </div>
                 <div class="form-group">
                     @Html.LabelFor(m => m.Siret)
